--- a/code/Comparison.html
+++ b/code/Comparison.html
@@ -18,8 +18,8 @@
               display: block;
               margin-top: 1em;
               margin-bottom: 5em;
-              margin-left: 20px;
-              margin-right: 20px;
+              margin-left: 2%;
+              margin-right: 2%;
         }
     </style>
 </head>
@@ -68,22 +68,22 @@
                             <div class ="col-sm-4 col-md-6">
                                 <figure>
                                     <h3 class="comp_fig_title">vs Max. temperature</h3>
-                                    <a href="MaxTemp.html"><img  src="../Resources/assets/images/Fig1.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =5>
+                                    <a href="MaxTemp.html"><img  src="../Resources/assets/images/Fig1.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10></a>
                                 </figure>
                                 <figure>
                                     <h4 class="comp_fig_title">vs Cloudiness</h4>
-                                    <a href="Cloudiness.html"><img  src="../Resources/assets/images/Fig3.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10>
+                                    <a href="Cloudiness.html"><img  src="../Resources/assets/images/Fig3.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10></a>
                                 </figure>
                             </div> 
 
                             <div class ="col-sm-4 col-md-6">
                                     <figure>
                                          <h4 class="comp_fig_title">vs Humidity</h4>
-                                         <a href="Humidity.html"><img  src="../Resources/assets/images/Fig2.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10>
+                                         <a href="Humidity.html"><img  src="../Resources/assets/images/Fig2.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10></a>
                                     </figure>
                                     <figure>
                                          <h4 class="comp_fig_title">vs Wind speed</h4>
-                                         <a href="Wind_speed.html"><img  src="../Resources/assets/images/Fig4.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10>
+                                         <a href="Wind_speed.html"><img  src="../Resources/assets/images/Fig4.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10></a>
                                     </figure>
                                 </div>         
                             <!-- <div class =" figure2 col-md-6">
