fix a link to html page

--- a/code/index.html
+++ b/code/index.html
@@ -88,7 +88,7 @@
                     <h3 class="page_title">Visualization</h3>
                     <div class="horizontal_line"> </div>
                     <div class =" white_background col-sm-4 col-md-6 col-sm-6">
-                        <a href="max_temp.html"><img  src="../Resources/assets/images/Fig1.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10>
+                        <a href="MaxTemp.html"><img  src="../Resources/assets/images/Fig1.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10>
                         <a href="Cloudiness.html"><img  src="../Resources/assets/images/Fig3.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10>
                     </div>
 
