final version of code + screen capture

--- a/code/Cloudiness.html
+++ b/code/Cloudiness.html
@@ -52,17 +52,17 @@
 
                
                <div class="white_background  container">
-                  <h3 class="page_title">Wind Speed</h3>
+                  <h3 class="page_title">Cloudiness</h3>
                   <div class="horizontal_line"> </div>
                       <div class="row">
                           <div class="col-md-11">
                                   <div class="thumbnail">
                                       <a href="Wind_speed.html">
-                                          <img class="img-responsive"    src="../Resources/assets/images/Fig3.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10></a>
+                                          <img class="img-responsive"    src="../Resources/assets/images/Fig3.png" alt="..."  style="width: 90%" align = "left" hspace = 10 vspace =10></a>
                                           
-                                          <div class="caption">
-                                              <p class="bold">Analysis:</p>
-                                                  <p>Cloudiness and latitude are not correlated</p>
+                                          <div >
+                                              <p class=" analysis bold">Analysis:</p>
+                                                  <p class = "text">Cloudiness and latitude are correlated</p>
                                                 </div>
                                       </div>
 
