--- a/code/MaxTemp.html
+++ b/code/MaxTemp.html
@@ -52,17 +52,18 @@
 
                
                <div class="white_background  container">
-                  <h3 class="page_title">Wind Speed</h3>
+                  <h3 class="page_title">Max temperature</h3>
                   <div class="horizontal_line"> </div>
                       <div class="row">
                           <div class="col-md-11">
                                   <div class="thumbnail">
                                       <a href="MaxTemp.html">
-                                        <img class="img-responsive" src="../Resources/assets/images/Fig1.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10></a>    
+                                        <img class="img-responsive" src="../Resources/assets/images/Fig1.png" alt="..."  style="width: 80%" align = "left" hspace = 10 vspace =10></a>    
                                           
-                                          <div class="caption">
-                                              <p>Analysis:</p>
-                                                  <p>Wind speed and latitude are not correlated</p>
+                                          <!-- <div class="caption"> -->
+                                            <div >
+                                              <p class=" analysis bold">Analysis:</p>
+                                                  <p class = "text">Max temperature and latitude are correlated</p>
                                                 </div>
                                       </div>
 
