--- a/code/Wind_Speed.html
+++ b/code/Wind_Speed.html
@@ -58,10 +58,10 @@
                                             <img class="img-responsive"  src="../Resources/assets/images/Fig4.png" alt="Wind"  style="width: 90%" align = "left" hspace = 10 vspace =10></a>
                                             
                                             
-                                            <div class="caption">
-                                                <p>Analysis:</p>
-                                                    <p>Wind speed and latitude are not correlated</p>
-                                                  </div>
+                                            <div>
+                                                <p class=" analysis bold">Analysis:</p>
+                                                  <p class = "text">Wind speed and latitude are not correlated</p>
+                                                </div>
                                         </div>
 
                           </div>
