--- a/code/Comparison.html
+++ b/code/Comparison.html
@@ -64,26 +64,26 @@
                         <div class ="figure col-md-12">
                             <h3 class="page_title">Visualization</h3>
                             <div class="horizontal_line"> </div>
-                            <h5 class="comp_comment">Click on any plot to get an in-depth analysis</h5>
+                            <h5 class="text comp_comment">Click on any plot to get an in-depth analysis</h5>
                             <div class ="col-sm-4 col-md-6">
                                 <figure>
                                     <h3 class="comp_fig_title">vs Max. temperature</h3>
-                                    <a href="MaxTemp.html"><img  src="../Resources/assets/images/Fig1.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10></a>
+                                    <a href="MaxTemp.html"><img  src="../Resources/assets/images/Fig1.png" alt="..."  style="width: 90%" align = "left" hspace = 10 vspace =10></a>
                                 </figure>
                                 <figure>
                                     <h4 class="comp_fig_title">vs Cloudiness</h4>
-                                    <a href="Cloudiness.html"><img  src="../Resources/assets/images/Fig3.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10></a>
+                                    <a href="Cloudiness.html"><img  src="../Resources/assets/images/Fig3.png" alt="..."  style="width: 90%" align = "left" hspace = 10 vspace =10></a>
                                 </figure>
                             </div> 
 
                             <div class ="col-sm-4 col-md-6">
                                     <figure>
                                          <h4 class="comp_fig_title">vs Humidity</h4>
-                                         <a href="Humidity.html"><img  src="../Resources/assets/images/Fig2.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10></a>
+                                         <a href="Humidity.html"><img  src="../Resources/assets/images/Fig2.png" alt="..."  style="width: 90%" align = "left" hspace = 10 vspace =10></a>
                                     </figure>
                                     <figure>
                                          <h4 class="comp_fig_title">vs Wind speed</h4>
-                                         <a href="Wind_speed.html"><img  src="../Resources/assets/images/Fig4.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10></a>
+                                         <a href="Wind_speed.html"><img  src="../Resources/assets/images/Fig4.png" alt="..."  style="width: 90%" align = "left" hspace = 10 vspace =10></a>
                                     </figure>
                                 </div>         
                             <!-- <div class =" figure2 col-md-6">
