--- a/code/Humidity.html
+++ b/code/Humidity.html
@@ -52,18 +52,19 @@
 
                
                <div class="white_background  container">
-                  <h3 class="page_title">Wind Speed</h3>
+                  <h3 class="page_title">Humidity</h3>
                   <div class="horizontal_line"> </div>
                       <div class="row">
                           <div class="col-md-11">
                                   <div class="thumbnail">
                                       <a href="Humidity.html">
-                                        <img class="img-responsive"  src="../Resources/assets/images/Fig2.png" alt="..."  style="width: 100%" align = "left" hspace = 10 vspace =10> </a>   
-                                          <div class="caption">
-                                              <p class="bold">Analysis:</p>
-                                                  <p>Cloudiness and latitude are not correlated</p>
-                                                </div>
-                                      </div>
+                                        <img class="img-responsive"  src="../Resources/assets/images/Fig2.png" alt="..."  style="width: 90%" align = "left" hspace = 10 vspace =10> </a>   
+                                        <div>
+                                            <p class=" analysis bold">Analysis:</p>
+                                                  <p class = "text">Humidity and latitude are correlated</p>
+                                            </div>
+                                      
+                                          </div>
 
                         </div>
                     </div>
